Refactor, fix jacoco missing tests, update workflow